--- a/NLP_Hotel_Reviews.ipynb
+++ b/NLP_Hotel_Reviews.ipynb
@@ -6111,12 +6111,12 @@
         "plot_dist3(dataset_2, 'char_count', 'Quantidade de Caracteres por review')"
       ],
       "metadata": {
-        "id": "C8LS_tiQMCRt",
-        "outputId": "da543122-f94d-4b84-c0f5-dd22f1182b9b",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 315
-        }
+        },
+        "id": "C8LS_tiQMCRt",
+        "outputId": "da543122-f94d-4b84-c0f5-dd22f1182b9b"
       },
       "execution_count": 113,
       "outputs": [
@@ -7318,7 +7318,7 @@
     {
       "cell_type": "markdown",
       "source": [
-        "**"
+        "**Número instâncias para treino**"
       ],
       "metadata": {
         "id": "ic7ET-vufe_g"
@@ -7351,6 +7351,28 @@
       ]
     },
     {
+      "cell_type": "markdown",
+      "source": [
+        "03 = quantidade de rótulos.\n",
+        "\n",
+        "9984 = quantidade de instâncias.\n",
+        "\n",
+        "09 = quantidade de atributos."
+      ],
+      "metadata": {
+        "id": "B_NceFVyhNc-"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "**Número instâncias para validação**"
+      ],
+      "metadata": {
+        "id": "dLxntD3chFRe"
+      }
+    },
+    {
       "cell_type": "code",
       "source": [
         "# count of unique label  control\n",
@@ -7375,6 +7397,15 @@
           ]
         }
       ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "**Número instâncias para teste**"
+      ],
+      "metadata": {
+        "id": "l_1_PYxuhIvP"
+      }
     },
     {
       "cell_type": "code",
@@ -7404,7 +7435,7 @@
     {
       "cell_type": "markdown",
       "source": [
-        "BertTokenizer and Encoding the Data"
+        "### **6.3.Tokeinização e Encoding**"
       ],
       "metadata": {
         "id": "8-B_hG9GNVrc"
@@ -7493,7 +7524,7 @@
     {
       "cell_type": "markdown",
       "source": [
-        "Creating the Model"
+        "### **6.4.Criação do Modelo**"
       ],
       "metadata": {
         "id": "4t60SksiOOXk"
@@ -7560,7 +7591,7 @@
     {
       "cell_type": "markdown",
       "source": [
-        "carregamento"
+        "**Carregamento**"
       ],
       "metadata": {
         "id": "0UG9Mn_NOU9_"
@@ -7588,7 +7619,7 @@
     {
       "cell_type": "markdown",
       "source": [
-        "Optimizer & Scheduler"
+        "**Optimização e Scheduler**"
       ],
       "metadata": {
         "id": "UJ1RF-lxOjsk"
@@ -7617,7 +7648,7 @@
     {
       "cell_type": "markdown",
       "source": [
-        "Performance Metrics"
+        "**Métricas de Performance**"
       ],
       "metadata": {
         "id": "s2MJYxDeOm6P"
@@ -7654,7 +7685,7 @@
     {
       "cell_type": "markdown",
       "source": [
-        "Treinamento do loop"
+        "## **7.Treinamento**"
       ],
       "metadata": {
         "id": "2NTY2nTxO9bQ"
@@ -8017,7 +8048,34 @@
     {
       "cell_type": "markdown",
       "source": [
-        "TEST ON VALIDATION SET"
+        "O código apresenta informações sobre o treinamento de um modelo ao longo de várias épocas. Cada época é representada por um número e é seguida por algumas métricas de desempenho. Vamos interpretar o código linha por linha:\n",
+        "\n",
+        "\n",
+        "Epoch 1: Esta linha indica que é a primeira época.\n",
+        "\n",
+        "\n",
+        "Training loss: 0.836971036520118: Isso indica o valor da perda (loss) durante o treinamento na primeira época. Quanto menor o valor da perda, melhor o desempenho do modelo.\n",
+        "\n",
+        "\n",
+        "Validation loss: 0.7540465974923664: Isso indica o valor da perda durante a validação na primeira época. A validação é uma etapa em que o modelo é avaliado em um conjunto de dados separado para verificar seu desempenho em dados não vistos anteriormente.\n",
+        "\n",
+        "\n",
+        "F1 Score (Weighted): 0.6462738219480487: Esse valor representa o F1-Score ponderado na primeira época. O F1-Score é uma métrica comum de avaliação de modelos de classificação, que combina a precisão e a revocação. O F1-Score ponderado leva em consideração a distribuição das classes.\n",
+        "\n",
+        "\n",
+        "Essas mesmas informações são fornecidas para cada época subsequente (Epoch 2, Epoch 3, etc.), mas com valores diferentes de perda e métricas de desempenho correspondentes a cada época específica. As métricas de desempenho fornecidas no código são perda (loss) e F1-Score ponderado, mas podem variar dependendo do contexto do código e do problema em questão.\n",
+        "\n",
+        "\n",
+        "Essas informações são úteis para acompanhar o progresso do treinamento do modelo ao longo das épocas e para avaliar a qualidade do modelo com base nas métricas de desempenho fornecidas."
+      ],
+      "metadata": {
+        "id": "Wpu_dY6cjxyE"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "## **7.1.Treinamento no set de validação**"
       ],
       "metadata": {
         "id": "xAgeRuWNISjg"
@@ -8087,7 +8145,32 @@
     {
       "cell_type": "markdown",
       "source": [
-        "Error Analysis"
+        "Os resultados fornecidos representam as métricas de avaliação de um modelo de classificação em um conjunto de dados. Vamos interpretar cada uma das métricas:\n",
+        "\n",
+        "Precision (Precisão): A precisão é a proporção de exemplos classificados corretamente como positivos (verdadeiros positivos) em relação ao total de exemplos classificados como positivos (verdadeiros positivos + falsos positivos). Para a classe 0, a precisão é de 0.59, para a classe 1 é de 0.58 e para a classe 2 é de 0.74.\n",
+        "\n",
+        "Recall (Revocação): A revocação é a proporção de exemplos classificados corretamente como positivos (verdadeiros positivos) em relação ao total de exemplos que realmente são positivos (verdadeiros positivos + falsos negativos). Para a classe 0, o recall é de 0.65, para a classe 1 é de 0.50 e para a classe 2 é de 0.78.\n",
+        "\n",
+        "F1-Score: O F1-Score é uma métrica que combina a precisão e a revocação em uma única medida. Ele é calculado como a média harmônica entre a precisão e a revocação. Para a classe 0, o F1-Score é de 0.62, para a classe 1 é de 0.54 e para a classe 2 é de 0.76.\n",
+        "\n",
+        "Support (Suporte): O suporte é o número de exemplos verdadeiros de cada classe presente no conjunto de dados. Para a classe 0, o suporte é de 1121 exemplos, para a classe 1 é de 1414 exemplos e para a classe 2 é de 1164 exemplos.\n",
+        "\n",
+        "Accuracy (Acurácia): A acurácia é a proporção de exemplos classificados corretamente em relação ao total de exemplos. Nesse caso, a acurácia é de 0.64, o que significa que o modelo classificou corretamente 64% dos exemplos.\n",
+        "\n",
+        "Macro avg (Média Macro): A média macro é a média das métricas (precisão, revocação, F1-Score) calculadas individualmente para cada classe, atribuindo o mesmo peso a cada classe. No caso desses resultados, a média macro para precisão, revocação e F1-Score é de 0.64.\n",
+        "\n",
+        "Weighted avg (Média Ponderada): A média ponderada é a média das métricas calculadas individualmente para cada classe, atribuindo pesos diferentes com base no suporte de cada classe. No caso desses resultados, a média ponderada para precisão, revocação e F1-Score é de 0.63.\n",
+        "\n",
+        "Essas métricas fornecem uma visão geral do desempenho do modelo de classificação para cada classe individualmente e para o conjunto de dados como um todo. A precisão, revocação e F1-Score são úteis para avaliar a qualidade do modelo, enquanto o suporte indica a quantidade de exemplos de cada classe no conjunto de dados. A acurácia fornece uma medida geral de quão bem o modelo está classificando corretamente os exemplos em relação ao total."
+      ],
+      "metadata": {
+        "id": "yrevTexhlKyM"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "## **7.1.Análise do Erro**"
       ],
       "metadata": {
         "id": "OyFpTVDWIp-f"
@@ -8096,8 +8179,8 @@
     {
       "cell_type": "code",
       "source": [
-        "# step by step predictions on dataframe\n",
-        "# We do this to view predictions in the pandas dataframe and easily filter them and perform error analysis.\n",
+        "# previsões passo a passo no dataframe\n",
+        "# Fazemos isso para visualizar as previsões no dataframe do pandas e filtrá-las facilmente e realizar análises de erros.\n",
         "\n",
         "pred_final = []\n",
         "\n",
@@ -8172,7 +8255,7 @@
     {
       "cell_type": "code",
       "source": [
-        "# add pred into val_df\n",
+        "# adiciona o atributo 'pred' into val_df\n",
         "val_df[\"pred\"] = pred_final"
       ],
       "metadata": {
@@ -8484,7 +8567,7 @@
     {
       "cell_type": "code",
       "source": [
-        "#  Add control column for easier wrong and right predictions\n",
+        "# Adicionar coluna de controle para previsões erradas e certas mais fáceis\n",
         "control = val_df.pred.values == val_df.review_classification.values\n",
         "val_df[\"control\"] = control"
       ],
@@ -8497,7 +8580,7 @@
     {
       "cell_type": "code",
       "source": [
-        "# filtering false predictions\n",
+        "# filtragem de previsões falsas\n",
         "val_df = val_df[val_df.control == False]"
       ],
       "metadata": {
@@ -8509,8 +8592,7 @@
     {
       "cell_type": "code",
       "source": [
-        "# buraları düzenle bbaaaabbaaaaa\n",
-        "# label to intent mapping\n",
+        "# rótulo para mapeamento de intenção\n",
         "name2label = {\"Negativo\":0,\n",
         "              \"Neutro\":1,\n",
         "             \"Positivo\":2\n",
@@ -8530,7 +8612,7 @@
       "source": [
         "from sklearn.metrics import confusion_matrix\n",
         "\n",
-        "# We create a confusion matrix to better observe the classes that the model confuses.\n",
+        "# Criamos uma matriz de confusão para observar melhor as classes que o modelo confunde.\n",
         "pred_name_values = val_df.pred_name.values\n",
         "label_values = val_df.label_name.values\n",
         "confmat = confusion_matrix(label_values, pred_name_values, labels=list(name2label.keys()))"
@@ -8801,6 +8883,50 @@
       ]
     },
     {
+      "cell_type": "markdown",
+      "source": [
+        "A matriz de confusão apresentada é uma representação tabular dos resultados da classificação para um modelo. Cada célula da matriz mostra a contagem de instâncias classificadas em uma determinada classe (linha) em relação à classe real (coluna). Vamos interpretar essa matriz de confusão:\n",
+        "\n",
+        "Coluna \"col_0\": As classes preditas pelo modelo são representadas como \"Negativo\", \"Neutro\" e \"Positivo\".\n",
+        "\n",
+        "Linha \"row_0\": As classes reais são representadas como \"Negativo\", \"Neutro\" e \"Positivo\".\n",
+        "\n",
+        "A interpretação da matriz de confusão é feita olhando-se as interseções entre as linhas e colunas. Cada célula da matriz fornece a contagem de instâncias que foram classificadas em determinada classe. Portanto, a interpretação dos valores é a seguinte:\n",
+        "\n",
+        "Na célula (row_0 = \"Negativo\", col_0 = \"Negativo\"): Não há instâncias classificadas corretamente como \"Negativo\". O valor é 0.\n",
+        "\n",
+        "Na célula (row_0 = \"Negativo\", col_0 = \"Neutro\"): Existem 422 instâncias reais da classe \"Negativo\" que foram classificadas como \"Neutro\".\n",
+        "\n",
+        "Na célula (row_0 = \"Negativo\", col_0 = \"Positivo\"): Existem 57 instâncias reais da classe \"Negativo\" que foram classificadas como \"Positivo\".\n",
+        "\n",
+        "Na célula (row_0 = \"Neutro\", col_0 = \"Negativo\"): Existem 363 instâncias reais da classe \"Neutro\" que foram classificadas como \"Negativo\".\n",
+        "\n",
+        "Na célula (row_0 = \"Neutro\", col_0 = \"Neutro\"): Não há instâncias classificadas corretamente como \"Neutro\". O valor é 0.\n",
+        "\n",
+        "Na célula (row_0 = \"Neutro\", col_0 = \"Positivo\"): Existem 141 instâncias reais da classe \"Neutro\" que foram classificadas como \"Positivo\".\n",
+        "\n",
+        "Na célula (row_0 = \"Positivo\", col_0 = \"Negativo\"): Existem 52 instâncias reais da classe \"Positivo\" que foram classificadas como \"Negativo\".\n",
+        "\n",
+        "Na célula (row_0 = \"Positivo\", col_0 = \"Neutro\"): Existem 318 instâncias reais da classe \"Positivo\" que foram classificadas como \"Neutro\".\n",
+        "\n",
+        "Na célula (row_0 = \"Positivo\", col_0 = \"Positivo\"): Não há instâncias classificadas corretamente como \"Positivo\". O valor é 0.\n",
+        "\n",
+        "Essa matriz de confusão mostra como o modelo classificou as instâncias para cada classe, permitindo uma análise mais detalhada dos acertos e erros de classificação."
+      ],
+      "metadata": {
+        "id": "1ANnXPNimeBE"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "## **7.Simulando a Aplicação do modelo em dados não vistos**\n"
+      ],
+      "metadata": {
+        "id": "y_kPXVTBm1nu"
+      }
+    },
+    {
       "cell_type": "code",
       "source": [
         "import torch\n",
@@ -8866,7 +8992,9 @@
     {
       "cell_type": "markdown",
       "source": [
-        "Falar sobre o balanceamento das classes\n"
+        "Falar sobre o balanceamento das classes\n",
+        "\n",
+        "É completamente possível usar apenas texto bruto como entrada para fazer previsões. O mais importante é poder extrair os recursos relevantes dessa fonte bruta de dados. Esse tipo de dado muitas vezes pode vir como uma boa fonte complementar em projetos de ciência de dados, a fim de extrair mais recursos de aprendizado e aumentar o poder preditivo dos modelos.\n"
       ],
       "metadata": {
         "id": "yz9Hwrn31aj3"
